// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`"Single Giving, No Money Buys, with overridden manual input value" renders correctly 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 {
  font-size: 4rem;
  line-height: normal;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  color: #FFFFFF;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c5 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  font-size: 1.25rem;
  line-height: normal;
  color: #FFFFFF;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c16 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c16 {
  font-size: 1.5rem;
  line-height: normal;
  font-weight: bold;
}

.c16 span {
  font-size: inherit;
  line-height: inherit;
}

.c20 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c20 span {
  font-size: inherit;
  line-height: inherit;
}

.c18 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c21 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c22 {
  position: relative;
  font-size: 1.25rem;
}

.c23 {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.c24 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c24 :focus {
  border: 1px solid #666;
}

.c0 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: auto;
  background-color: #274084;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  flex-direction: row;
  align-items: center;
  display: block;
  width: 100%;
  flex-direction: row;
}

.c2 {
  width: 100%;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c13 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  border-radius: 0.5rem;
  margin-top: 1rem;
}

.c13 h3 {
  margin-top: 1rem;
}

.c13 input {
  max-width: 100%;
  margin: 0;
}

.c13 input[type='submit'] {
  margin: 2rem 0;
}

.c14 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c14 input[type='submit'] {
  margin-bottom: 0;
}

.c15 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c17 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c19 {
  position: relative;
  flex-basis: 50%;
  flex-shrink: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c19 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c19 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c19 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c25 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c26 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  appearance: none;
}

.c26 :active,
.c26 :focus,
.c26 :hover {
  outline: none;
  background-color: #961D35;
}

.c12 {
  width: 50%;
  height: 48px;
  border-radius: 2rem;
  z-index: 1;
  display: block;
  position: absolute;
  transition: left 0.15s ease-out;
  background-color: #2042AD;
  left: 2px;
  box-shadow: rgba(0,0,0,0.25) 0px 0px 1rem;
}

.c7 {
  display: flex;
  margin: 1rem 0;
}

.c8 {
  width: 100%;
  padding: 2px;
  position: relative;
  display: flex;
  flex-direction: row;
  margin: 1rem 0;
  border-radius: 2rem;
  background: #BECCF9;
}

.c8 .give-monthly:checked~.c11 {
  left: calc(50% - 2px);
}

.c8 input {
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c8 input:focus:not(:checked)+label {
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c10 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-basis: 50%;
  border: none;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: pointer;
  border-radius: 2rem;
  color: #000000;
}

.c10:active:focus {
  box-shadow: none;
}

.c10:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c9 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-basis: 50%;
  border: none;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: default;
  border-radius: 2rem;
  color: #FFFFFF;
}

.c9:active:focus {
  box-shadow: none;
}

.c9:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

@media (min-width: 740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width: 740px) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c16 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c16 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c20 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    flex-direction: row;
    align-items: center;
    justify-content: inherit;
    background-color: #274084;
  }
}

@media (min-width: 740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width: 1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    align-items: center;
  }
}

@media (min-width: 1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width: 740px) {
  .c13 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 740px) {
  .c14 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width: 740px) {
  .c19 {
    flex-basis: 60%;
  }
}

@media (min-width: 740px) {
  .c26 {
    padding: 1rem 2rem;
  }
}

@media (min-width: 740px) {
  .c8 {
    width: 450px;
    margin: 0 auto;
  }
}

<div
  className="c0"
  desktopOverlayColor="blue_dark"
  id="mship-4"
  mobileBackgroundColor="blue_dark"
>
  <div
    aria-live="polite"
    className="c1"
    formAlignRight={false}
    noTitlesAtAll={false}
    paddingOption={null}
  >
    <div
      className="c2"
      formAlignRight={false}
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
        >
          Donate Now
        </h2>
        <p
          className="c5"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <input
            aria-label="Single"
            checked={true}
            className="give-once"
            id="give-once--mship-4"
            label=""
            onChange={[Function]}
            type="radio"
            value="Single"
          />
          <label
            active={true}
            className="c9"
            htmlFor="give-once--mship-4"
          >
            Single
          </label>
          <input
            aria-label="Monthly"
            checked={false}
            className="give-monthly"
            id="give-monthly--mship-4"
            label=""
            onChange={[Function]}
            type="radio"
            value="Monthly"
          />
          <label
            active={false}
            className="c10"
            htmlFor="give-monthly--mship-4"
          >
            Monthly
          </label>
          <span
            className="c11 c12"
          />
        </div>
      </div>
      <form
        className="c13"
        onSubmit={[Function]}
      >
        <fieldset
          className="c14"
        >
          <legend
            className="c15"
          >
            <span
              className="c16"
            >
              Enter an amount to give
            </span>
          </legend>
          <div
            className="c17"
          >
            <label
              className="c18 c19"
              errorMsg=""
              htmlFor="mship-4--MoneyBuy-userInput"
              optional={null}
            >
              <span
                className="c20 c21"
                dangerouslySetInnerHTML={
                  {
                    "__html": "£",
                  }
                }
              />
              <div
                className="c22"
                error={false}
              >
                <div
                  className="c23"
                  error={false}
                >
                  <input
                    aria-label="Input a different amount"
                    aria-required={false}
                    className="c24"
                    error={false}
                    id="mship-4--MoneyBuy-userInput"
                    inputBorderColor={false}
                    max="25000"
                    min="1"
                    name="membership_amount"
                    onChange={[Function]}
                    pattern="[^[0-9]+([,.][0-9]+)?$]"
                    placeholder="0.00"
                    prefixLength={0}
                    required={false}
                    step="0.01"
                    type="string"
                    value={345.67}
                  />
                </div>
              </div>
            </label>
          </div>
          <p
            className="c25"
          >
            <strong>
              £345.67 
            </strong>
            will help us fund amazing projects in the UK and around the world.
          </p>
          <button
            className="c26 Button_DonateWidget"
            color="red"
            type="submit"
          >
            Donate £345.67 now
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Monthly donation renders correctly 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 {
  font-size: 4rem;
  line-height: normal;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  color: #FFFFFF;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c5 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  font-size: 1.25rem;
  line-height: normal;
  color: #FFFFFF;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c15 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c15 {
  font-size: 1.5rem;
  line-height: normal;
  font-weight: bold;
}

.c15 span {
  font-size: inherit;
  line-height: inherit;
}

.c17 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c17 {
  font-size: 1rem;
  line-height: normal;
  font-weight: 500;
}

.c17 span {
  font-size: inherit;
  line-height: inherit;
}

.c21 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c21 span {
  font-size: inherit;
  line-height: inherit;
}

.c19 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c22 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c23 {
  position: relative;
  font-size: 1.25rem;
}

.c24 {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.c25 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c25 :focus {
  border: 1px solid #666;
}

.c0 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: auto;
  background-color: #274084;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  flex-direction: row;
  align-items: center;
  display: block;
  width: 100%;
  flex-direction: row-reverse;
}

.c2 {
  width: 100%;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c12 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  border-radius: 0.5rem;
  margin-top: 1rem;
}

.c12 h3 {
  margin-top: 1rem;
}

.c12 input {
  max-width: 100%;
  margin: 0;
}

.c12 input[type='submit'] {
  margin: 2rem 0;
}

.c13 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c13 input[type='submit'] {
  margin-bottom: 0;
}

.c14 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c16 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c18 {
  margin-right: 0.5rem;
}

.c20 {
  position: relative;
  flex-basis: 50%;
  flex-shrink: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c20 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c20 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c20 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c26 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c27 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  appearance: none;
}

.c27 :active,
.c27 :focus,
.c27 :hover {
  outline: none;
  background-color: #961D35;
}

.c11 {
  width: 50%;
  height: 48px;
  border-radius: 2rem;
  z-index: 1;
  display: block;
  position: absolute;
  transition: left 0.15s ease-out;
  background-color: #2042AD;
  left: 2px;
  box-shadow: rgba(0,0,0,0.25) 0px 0px 1rem;
}

.c7 {
  display: flex;
  margin: 1rem 0;
}

.c8 {
  width: 100%;
  padding: 2px;
  position: relative;
  display: flex;
  flex-direction: row;
  margin: 1rem 0;
  border-radius: 2rem;
  background: #BECCF9;
}

.c8 .give-monthly:checked~.c10 {
  left: calc(50% - 2px);
}

.c8 input {
  border: 0;
  clip: rect(0 0 0 0);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.c8 input:focus:not(:checked)+label {
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c9 {
  font-size: 1rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: bold;
  min-height: 48px;
  align-items: center;
  justify-content: center;
  display: flex;
  flex-basis: 50%;
  border: none;
  transition: color 0.15s ease-out;
  z-index: 2;
  cursor: pointer;
  border-radius: 2rem;
  color: #000000;
}

.c9:active:focus {
  box-shadow: none;
}

.c9:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

@media (min-width: 740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width: 740px) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c15 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c17 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c21 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c22 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    flex-direction: row;
    align-items: center;
    justify-content: inherit;
    background-color: transparent;
  }
}

@media (min-width: 740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width: 1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    align-items: center;
  }
}

@media (min-width: 1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width: 740px) {
  .c12 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 740px) {
  .c13 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width: 740px) {
  .c20 {
    flex-basis: 60%;
  }
}

@media (min-width: 740px) {
  .c27 {
    padding: 1rem 2rem;
  }
}

@media (min-width: 740px) {
  .c8 {
    width: 450px;
    margin: 0 auto;
  }
}

<div
  className="c0"
  desktopOverlayColor="transparent"
  id="mship-1"
  mobileBackgroundColor="blue_dark"
>
  <div
    aria-live="polite"
    className="c1"
    formAlignRight={true}
    noTitlesAtAll={false}
    paddingOption={null}
  >
    <div
      className="c2"
      formAlignRight={true}
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
        >
          Donate Now
        </h2>
        <p
          className="c5"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <div
        className="c7"
      >
        <div
          className="c8"
        >
          <input
            aria-label="Single"
            checked={false}
            className="give-once"
            id="give-once--mship-1"
            label=""
            onChange={[Function]}
            type="radio"
            value="Single"
          />
          <label
            active={false}
            className="c9"
            htmlFor="give-once--mship-1"
          >
            Single
          </label>
          <input
            aria-label="Monthly"
            checked={false}
            className="give-monthly"
            id="give-monthly--mship-1"
            label=""
            onChange={[Function]}
            type="radio"
            value="Monthly"
          />
          <label
            active={false}
            className="c9"
            htmlFor="give-monthly--mship-1"
          >
            Monthly
          </label>
          <span
            className="c10 c11"
          />
        </div>
      </div>
      <form
        className="c12"
        onSubmit={[Function]}
      >
        <fieldset
          className="c13"
        >
          <legend
            className="c14"
          >
            <span
              className="c15"
            >
              Choose an amount to give
            </span>
          </legend>
          <div
            className="c16"
          >
            <span
              className="c17 c18"
            >
              Other amount
            </span>
            <label
              className="c19 c20"
              errorMsg=""
              htmlFor="mship-1--MoneyBuy-userInput"
              optional={null}
            >
              <span
                className="c21 c22"
                dangerouslySetInnerHTML={
                  {
                    "__html": "£",
                  }
                }
              />
              <div
                className="c23"
                error={false}
              >
                <div
                  className="c24"
                  error={false}
                >
                  <input
                    aria-label="Input a different amount"
                    aria-required={false}
                    className="c25"
                    error={false}
                    id="mship-1--MoneyBuy-userInput"
                    inputBorderColor={false}
                    max="25000"
                    min="1"
                    name="membership_amount"
                    onChange={[Function]}
                    pattern="[^[0-9]+([,.][0-9]+)?$]"
                    placeholder="0.00"
                    prefixLength={0}
                    required={false}
                    step="0.01"
                    type="string"
                    value={10}
                  />
                </div>
              </div>
            </label>
          </div>
          <p
            className="c26"
          >
            <strong>
              £10 
            </strong>
          </p>
          <button
            className="c27 Button_DonateWidget"
            color="red"
            type="submit"
          >
            Donate £10 monthly
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single donation renders correctly 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 {
  font-size: 4rem;
  line-height: normal;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  color: #FFFFFF;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c5 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  font-size: 1.25rem;
  line-height: normal;
  color: #FFFFFF;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c10 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c10 {
  font-size: 1.5rem;
  line-height: normal;
  font-weight: bold;
}

.c10 span {
  font-size: inherit;
  line-height: inherit;
}

.c21 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c21 {
  font-size: 1rem;
  line-height: normal;
  font-weight: 500;
}

.c21 span {
  font-size: inherit;
  line-height: inherit;
}

.c14 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c14 span {
  font-size: inherit;
  line-height: inherit;
}

.c12 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c15 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c17 {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.c18 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c18 :focus {
  border: 1px solid #666;
}

.c13 {
  display: block;
}

.c13 input {
  border: none;
  background-color: #BECCF9;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 0.5rem;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  height: auto;
}

.c13 input:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c13 input:active:focus {
  box-shadow: rgba(0,0,0,0.25) 0px 0px 1rem;
}

.c19 {
  display: block;
}

.c19 input {
  border: none;
  background-color: #BECCF9;
  color: #000000;
  font-size: 1.5rem;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  border-radius: 0.5rem;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  height: auto;
  background-color: #2042AD;
  box-shadow: rgba(0,0,0,0.25) 0px 0px 1rem;
  color: #FFFFFF;
}

.c19 input:focus {
  border: none;
  outline: none;
  box-shadow: inset 0 0 0 4px #2042AD;
}

.c19 input:active:focus {
  box-shadow: rgba(0,0,0,0.25) 0px 0px 1rem;
}

.c19 input:focus {
  box-shadow: rgba(0,0,0,0.25) 0px 0px 1rem;
}

.c0 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: auto;
  background-color: #274084;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  flex-direction: row;
  align-items: center;
  display: block;
  width: 100%;
  flex-direction: row;
}

.c2 {
  width: 100%;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  border-radius: 0.5rem;
  margin-top: 1rem;
}

.c7 h3 {
  margin-top: 1rem;
}

.c7 input {
  max-width: 100%;
  margin: 0;
}

.c7 input[type='submit'] {
  margin: 2rem 0;
}

.c8 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c8 input[type='submit'] {
  margin-bottom: 0;
}

.c9 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c11 {
  display: flex;
  justify-content: space-between;
  flex-direction: column;
  margin-bottom: 2rem;
}

.c11 label {
  flex: 0 0 30%;
  margin-bottom: 0.5rem;
}

.c11 label input {
  cursor: pointer;
  padding: 1.5rem 0.5rem;
}

.c20 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c22 {
  margin-right: 0.5rem;
}

.c23 {
  position: relative;
  flex-basis: 50%;
  flex-shrink: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c23 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c23 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c23 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c24 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c25 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  appearance: none;
}

.c25 :active,
.c25 :focus,
.c25 :hover {
  outline: none;
  background-color: #961D35;
}

@media (min-width: 740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width: 740px) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c10 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c21 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c14 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 740px) {
  .c13 input {
    font-size: 2rem;
    padding: 1.5rem;
  }
}

@media (min-width: 740px) {
  .c19 input {
    font-size: 2rem;
    padding: 1.5rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    flex-direction: row;
    align-items: center;
    justify-content: inherit;
    background-color: transparent;
  }
}

@media (min-width: 740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width: 1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    align-items: center;
  }
}

@media (min-width: 1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width: 740px) {
  .c7 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 740px) {
  .c8 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width: 740px) {
  .c11 {
    flex-direction: row;
  }
}

@media (min-width: 740px) {
  .c11 label {
    margin-bottom: 0;
  }
}

@media (min-width: 740px) {
  .c23 {
    flex-basis: 60%;
  }
}

@media (min-width: 740px) {
  .c25 {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
  desktopOverlayColor="transparent"
  id="mship-1"
  mobileBackgroundColor="blue_dark"
>
  <div
    aria-live="polite"
    className="c1"
    formAlignRight={false}
    noTitlesAtAll={false}
    paddingOption={null}
  >
    <div
      className="c2"
      formAlignRight={false}
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
        >
          Donate Now
        </h2>
        <p
          className="c5"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <form
        className="c7"
        onSubmit={[Function]}
      >
        <fieldset
          className="c8"
        >
          <legend
            className="c9"
          >
            <span
              className="c10"
            >
              Choose an amount to give
            </span>
          </legend>
          <div
            className="c11"
          >
            <label
              className="c12 c13"
              errorMsg=""
              htmlFor="mship-1--moneyBuy-box1"
              optional={null}
            >
              <span
                className="c14 c15"
                dangerouslySetInnerHTML={
                  {
                    "__html": "",
                  }
                }
              />
              <div
                className="c16"
                error={false}
              >
                <div
                  className="c17"
                  error={false}
                >
                  <input
                    aria-label="£10"
                    aria-required={false}
                    className="c18"
                    error={false}
                    id="mship-1--moneyBuy-box1"
                    isSelected={false}
                    name="mship-1--moneyBuy1"
                    onClick={[Function]}
                    placeholder=""
                    prefixLength={0}
                    required={false}
                    type="button"
                    value="£ 10"
                  />
                </div>
              </div>
            </label>
            <label
              className="c12 c19"
              errorMsg=""
              htmlFor="mship-1--moneyBuy-box2"
              optional={null}
            >
              <span
                className="c14 c15"
                dangerouslySetInnerHTML={
                  {
                    "__html": "",
                  }
                }
              />
              <div
                className="c16"
                error={false}
              >
                <div
                  className="c17"
                  error={false}
                >
                  <input
                    aria-label="£20"
                    aria-required={false}
                    className="c18"
                    error={false}
                    id="mship-1--moneyBuy-box2"
                    isSelected={true}
                    name="mship-1--moneyBuy2"
                    onClick={[Function]}
                    placeholder=""
                    prefixLength={0}
                    required={false}
                    type="button"
                    value="£ 20"
                  />
                </div>
              </div>
            </label>
            <label
              className="c12 c13"
              errorMsg=""
              htmlFor="mship-1--moneyBuy-box3"
              optional={null}
            >
              <span
                className="c14 c15"
                dangerouslySetInnerHTML={
                  {
                    "__html": "",
                  }
                }
              />
              <div
                className="c16"
                error={false}
              >
                <div
                  className="c17"
                  error={false}
                >
                  <input
                    aria-label="£30"
                    aria-required={false}
                    className="c18"
                    error={false}
                    id="mship-1--moneyBuy-box3"
                    isSelected={false}
                    name="mship-1--moneyBuy3"
                    onClick={[Function]}
                    placeholder=""
                    prefixLength={0}
                    required={false}
                    type="button"
                    value="£ 30"
                  />
                </div>
              </div>
            </label>
          </div>
          <div
            className="c20"
          >
            <span
              className="c21 c22"
            >
              Other amount
            </span>
            <label
              className="c12 c23"
              errorMsg=""
              htmlFor="mship-1--MoneyBuy-userInput"
              optional={null}
            >
              <span
                className="c14 c15"
                dangerouslySetInnerHTML={
                  {
                    "__html": "£",
                  }
                }
              />
              <div
                className="c16"
                error={false}
              >
                <div
                  className="c17"
                  error={false}
                >
                  <input
                    aria-label="Input a different amount"
                    aria-required={false}
                    className="c18"
                    error={false}
                    id="mship-1--MoneyBuy-userInput"
                    inputBorderColor={false}
                    max="25000"
                    min="1"
                    name="membership_amount"
                    onChange={[Function]}
                    pattern="[^[0-9]+([,.][0-9]+)?$]"
                    placeholder="0.00"
                    prefixLength={0}
                    required={false}
                    step="0.01"
                    type="string"
                    value={20}
                  />
                </div>
              </div>
            </label>
          </div>
          <p
            className="c24"
          >
            <strong>
              £20 
            </strong>
            a support worker to visit 10 isolated young mums with postnatal depression in the UK.
          </p>
          <button
            className="c25 Button_DonateWidget"
            color="red"
            type="submit"
          >
            Donate £20 now
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;

exports[`Single donation with no Money Buys renders correctly 1`] = `
.c4 {
  font-family: 'Anton',Impact,sans-serif;
  font-weight: 400;
  text-transform: uppercase;
  letter-spacing: 0;
  font-size: 1.5rem;
  line-height: 1.5rem;
}

.c4 {
  font-size: 4rem;
  line-height: normal;
  font-family: 'Anton',Impact,sans-serif;
  font-weight: normal;
  color: #FFFFFF;
}

.c4 span {
  font-size: inherit;
  line-height: inherit;
}

.c5 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c5 {
  font-size: 1.25rem;
  line-height: normal;
  color: #FFFFFF;
}

.c5 span {
  font-size: inherit;
  line-height: inherit;
}

.c10 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c10 {
  font-size: 1.5rem;
  line-height: normal;
  font-weight: bold;
}

.c10 span {
  font-size: inherit;
  line-height: inherit;
}

.c14 {
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c14 span {
  font-size: inherit;
  line-height: inherit;
}

.c12 {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  color: #000000;
}

.c15 {
  margin-bottom: 0.5rem;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
  font-weight: 400;
  text-transform: inherit;
  letter-spacing: 0;
  font-size: 1rem;
  line-height: 1.25rem;
}

.c16 {
  position: relative;
  font-size: 1.25rem;
}

.c17 {
  position: relative;
  width: 100%;
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.c18 {
  position: relative;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  padding: 1rem 2.4rem 1rem 1.5rem;
  background-color: #F4F3F5;
  border: 1px solid;
  border-color: #969598;
  box-shadow: none;
  appearance: none;
  color: #000000;
  border-radius: 0.5rem;
  font-size: inherit;
  z-index: 2;
  font-family: inherit;
}

.c18 :focus {
  border: 1px solid #666;
}

.c0 {
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: auto;
  background-color: #274084;
}

.c1 {
  position: relative;
  text-align: center;
  padding: 2rem 1rem;
  flex-direction: row;
  align-items: center;
  display: block;
  width: 100%;
  flex-direction: row;
}

.c2 {
  width: 100%;
  display: flex;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c3 {
  position: relative;
  text-align: left;
}

.c6 {
  position: relative;
  font-family: 'Montserrat',Helvetica,Arial,sans-serif;
}

.c7 {
  position: relative;
  width: 100%;
  background-color: #FFFFFF;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  border-radius: 0.5rem;
  margin-top: 1rem;
}

.c7 h3 {
  margin-top: 1rem;
}

.c7 input {
  max-width: 100%;
  margin: 0;
}

.c7 input[type='submit'] {
  margin: 2rem 0;
}

.c8 {
  padding: 0 1rem 1rem;
  margin: 0;
  border: none;
}

.c8 input[type='submit'] {
  margin-bottom: 0;
}

.c9 {
  margin: 0;
  padding: 2rem 0.5rem;
  display: block;
  width: 100%;
}

.c11 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c13 {
  position: relative;
  flex-basis: 50%;
  flex-shrink: 0;
  flex-grow: 0;
  font-weight: 400;
  display: block;
}

.c13 span {
  position: absolute;
  font-size: 20px;
  top: 50%;
  transform: translateY(-50%);
  left: 0px;
  font-weight: 500;
  padding: 0px 15px;
  z-index: 3;
}

.c13 input {
  height: 48px;
  border: 2px solid #969598;
  background: #F4F3F5;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem 0.5rem 2rem;
}

.c13 input:focus {
  outline: none;
  border: 2px solid #969598;
}

.c19 {
  line-height: 1.5;
  margin-top: 2rem;
}

.c20 {
  width: 100%;
  margin: 2rem 0 2rem;
  color: #FFFFFF;
  font-size: 1rem;
  font-weight: bold;
  cursor: pointer;
  min-height: 48px;
  background: #E52630;
  text-decoration: none;
  border-radius: 2rem;
  border: none;
  box-shadow: rgba(0,0,0,0.15) 0px 0px 1rem;
  appearance: none;
}

.c20 :active,
.c20 :focus,
.c20 :hover {
  outline: none;
  background-color: #961D35;
}

@media (min-width: 740px) {
  .c4 {
    font-size: 1.875rem;
    line-height: 1.875rem;
  }
}

@media (min-width: 1024px) {
  .c4 {
    font-size: 2rem;
    line-height: 2rem;
  }
}

@media (min-width: 740px) {
  .c5 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c10 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c10 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c14 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c14 {
    font-size: 1.125rem;
    line-height: 1.375rem;
  }
}

@media (min-width: 740px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c15 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width: 1024px) {
  .c0 {
    flex-direction: row;
    align-items: center;
    justify-content: inherit;
    background-color: transparent;
  }
}

@media (min-width: 740px) {
  .c1 {
    padding: 4rem 1rem;
  }
}

@media (min-width: 1024px) {
  .c1 {
    display: flex;
    padding: 4rem 0;
  }
}

@media (min-width: 1024px) {
  .c2 {
    width: 50%;
    padding: 4rem;
    align-items: center;
  }
}

@media (min-width: 1024px) {
  .c6 {
    width: 50%;
  }
}

@media (min-width: 740px) {
  .c7 {
    width: 450px;
    margin-right: auto;
    margin-left: auto;
  }
}

@media (min-width: 740px) {
  .c8 {
    padding: 0 2rem 2rem;
  }
}

@media (min-width: 740px) {
  .c13 {
    flex-basis: 60%;
  }
}

@media (min-width: 740px) {
  .c20 {
    padding: 1rem 2rem;
  }
}

<div
  className="c0"
  desktopOverlayColor="transparent"
  id="mship-1"
  mobileBackgroundColor="blue_dark"
>
  <div
    aria-live="polite"
    className="c1"
    formAlignRight={false}
    noTitlesAtAll={false}
    paddingOption={null}
  >
    <div
      className="c2"
      formAlignRight={false}
    >
      <div
        className="c3"
      >
        <h2
          className="c4"
        >
          Donate Now
        </h2>
        <p
          className="c5"
        >
          Please help us fund life-changing projects in the UK and around the world.
        </p>
      </div>
    </div>
    <div
      className="c6"
    >
      <form
        className="c7"
        onSubmit={[Function]}
      >
        <fieldset
          className="c8"
        >
          <legend
            className="c9"
          >
            <span
              className="c10"
            >
              Overridden via the 'choose amount text' props
            </span>
          </legend>
          <div
            className="c11"
          >
            <label
              className="c12 c13"
              errorMsg=""
              htmlFor="mship-1--MoneyBuy-userInput"
              optional={null}
            >
              <span
                className="c14 c15"
                dangerouslySetInnerHTML={
                  {
                    "__html": "£",
                  }
                }
              />
              <div
                className="c16"
                error={false}
              >
                <div
                  className="c17"
                  error={false}
                >
                  <input
                    aria-label="Input a different amount"
                    aria-required={false}
                    className="c18"
                    error={false}
                    id="mship-1--MoneyBuy-userInput"
                    inputBorderColor={false}
                    max="25000"
                    min="1"
                    name="membership_amount"
                    onChange={[Function]}
                    pattern="[^[0-9]+([,.][0-9]+)?$]"
                    placeholder="0.00"
                    prefixLength={0}
                    required={false}
                    step="0.01"
                    type="string"
                    value={10}
                  />
                </div>
              </div>
            </label>
          </div>
          <p
            className="c19"
          >
            <strong>
              £10 
            </strong>
          </p>
          <button
            className="c20 Button_DonateWidget"
            color="red"
            type="submit"
          >
            Donate £10 monthly
          </button>
        </fieldset>
      </form>
    </div>
  </div>
</div>
`;
